<resources>
    <string name="app_name">StoplichtApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="authenticated">"Welcome"</string>
    <string name="vote_message">"what did you think of:"</string>

    <string name="main_textview_welcome_messgae">Welcome to the stoplichtapp</string>
    <string name="main_textview_not_authenticated">Sign in to continue</string>
    <string name="main_button_logout">Logout user</string>
    <string name="main_button_login">Login user</string>
    <string name="main_button_meetings">Meetings</string>
    <string name="main_button_add_meeting">Add Meeting</string>


</resources>
